--- a/authorization_code/public/index.html
+++ b/authorization_code/public/index.html
@@ -2,6 +2,7 @@
 <html>
   <head>
     <title>Example of the Authorization Code flow with Spotify</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <!-- <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css"> -->
     <style type="text/css">
@@ -13,6 +14,41 @@
         text-overflow: ellipsis;
         white-space: nowrap;
         width: 500px;
+      }
+
+      .wrapper { 
+        border : 2px solid #000; 
+        overflow:hidden;
+      }
+
+      .wrapper div {
+        min-height: 200px;
+        padding: 10px;
+      }
+      #one {
+        background-color: gray;
+        float:left; 
+        margin-right:20px;
+        width:200px;
+        border-right:2px solid #000;
+        min-width: 400px;
+      }
+      #two { 
+        background-color: white;
+        overflow:hidden;
+        margin:10px;
+        border:2px dashed #ccc;
+        min-height:170px;
+      }
+
+      @media screen and (max-width: 1000px) {
+        #one { 
+          float: none;
+          margin-right:0;
+          width:auto;
+          border:0;
+          border-bottom:2px solid #000;    
+        }
       }
     </style>
   </head>
@@ -39,13 +75,17 @@
         </div>
       </div>
     </div>
+    <div class="wrapper">
+      <div id="one">one</div>
+      <div id="two">two</div>
+    </div>
 
     <script id="top-template" type="text/x-handlebars-template">
-      <div class="row">
-        <div class="col-sm-5" style="background-color:pink;">
+      <div class="row wrapper">
+        <div id="one" class="col-sm-5" style="background-color:pink;">
           <canvas id="word_cloud" class="word_cloud" width="400" height="400"></canvas>
         </div>
-        <div class="col-sm-5" style="background-color:yellow;">
+        <div id="two" class="col-sm-5" style="background-color:yellow;">
           <h1>Customize</h1>
           <h2>Choose a time range</h2>
           <div class="d-flex flex-row">
