improved navigation, added privacy policy page

--- a/authorization_code/public/privacyPolicy.html
+++ b/authorization_code/public/privacyPolicy.html
@@ -1,11 +1,68 @@
 <!doctype html>
 <html>
-<head>
-<title>Our Funky HTML Page</title>
-<meta name="description" content="Our first page">
-<meta name="keywords" content="html tutorial template">
-</head>
-<body>
-Content goes here.
-</body>
+    <head>
+        <title>Privacy Policy</title>
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/5.0.0-alpha1/css/bootstrap.min.css">
+
+        <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"></script>
+        <script src="https://stackpath.bootstrapcdn.com/bootstrap/5.0.0-alpha1/js/bootstrap.min.js"></script>
+
+        <link rel="stylesheet" href="./styles.css">
+    </head>
+    <body>
+        <nav class="navbar navbar-light bg-light">
+            <div class="container-fluid">
+                <a class="header wordcloudifyFont" id="navBarWordCloudify" href="./index.html">WordCloudify</a>
+                <div class="d-flex">
+                <svg xmlns="http://www.w3.org/2000/svg" width="35" height="35" fill="currentColor" class="bi bi-info-circle" viewBox="0 0 16 16" data-toggle="modal" data-target="#infoModal" id="info">
+                    <path d="M8 15A7 7 0 1 1 8 1a7 7 0 0 1 0 14zm0 1A8 8 0 1 0 8 0a8 8 0 0 0 0 16z"/>
+                    <path d="m8.93 6.588-2.29.287-.082.38.45.083c.294.07.352.176.288.469l-.738 3.468c-.194.897.105 1.319.808 1.319.545 0 1.178-.252 1.465-.598l.088-.416c-.2.176-.492.246-.686.246-.275 0-.375-.193-.304-.533L8.93 6.588zM9 4.5a1 1 0 1 1-2 0 1 1 0 0 1 2 0z"/>
+                </svg>
+                <br>
+                </div>
+            </div>
+        </nav>
+      
+        <!-- Modal -->
+        <div class="modal fade" id="infoModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+            <div class="modal-dialog" role="document">
+            <div class="modal-content">
+                <div class="modal-header">
+                <h5 class="modal-title" id="exampleModalLabel">Welcome to WordCloudify</h5>
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                </button>
+                </div>
+                <div class="modal-body">
+                <p>
+                    WordCloudify allows Spotify users to display their top artists in the form of a word cloud.
+                    You can customize your word cloud by choosing your word cloud's color theme as well as time range of your top artist data.
+                </p>
+                <p>
+                    For more detail on how WordCloudify uses your data, please check out our
+                    <a href="./privacyPolicy.html">privacy policy</a>.
+                </p>
+                </div>
+                <div class="modal-footer">
+                <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                </div>
+            </div>
+            </div>
+        </div> 
+        
+        <div style="text-align: center; padding-top: 20px; width:800px; margin:0 auto;">
+            <h1>Privacy Policy</h1>
+            <p>WordCloudify uses Spotify's API in order to retrieve your top artists. By choosing to use WordCloudify, you agree to the use of the data for your top artists.</p>
+            <p>None of the data gathered by WordCloudify is stored or shared to any third parties. All information collected is used solely to present your word cloud.</p>
+            <p>If at any point you would like to revoke WordCloudify's permissions with your account, you can do so on
+                <a href="http://www.spotify.com/account/apps/?_ga=2.57194153.2059435232.1677244602-1044990631.1616788427">your apps page</a>
+                . This
+                <a href="https://support.spotify.com/us/article/spotify-on-other-apps/">article</a>
+              provides further instructions on how to do so.
+            </p>
+            <p>For any further inquiries, please contact me.</p>
+        </div>
+    </body>
 </html>
