--- a/authorization_code/public/index.html
+++ b/authorization_code/public/index.html
@@ -15,17 +15,13 @@
   <body>
     <nav class="navbar navbar-light bg-light">
       <div class="container-fluid">
-        <a class="header wordcloudifyFont">WordCloudify</a>
+        <a class="header wordcloudifyFont" id="navBarWordCloudify" href="./index.html">WordCloudify</a>
         <div class="d-flex">
           <svg xmlns="http://www.w3.org/2000/svg" width="35" height="35" fill="currentColor" class="bi bi-info-circle" viewBox="0 0 16 16" data-toggle="modal" data-target="#infoModal" id="info">
             <path d="M8 15A7 7 0 1 1 8 1a7 7 0 0 1 0 14zm0 1A8 8 0 1 0 8 0a8 8 0 0 0 0 16z"/>
             <path d="m8.93 6.588-2.29.287-.082.38.45.083c.294.07.352.176.288.469l-.738 3.468c-.194.897.105 1.319.808 1.319.545 0 1.178-.252 1.465-.598l.088-.416c-.2.176-.492.246-.686.246-.275 0-.375-.193-.304-.533L8.93 6.588zM9 4.5a1 1 0 1 1-2 0 1 1 0 0 1 2 0z"/>
           </svg>
           <br>
-          <svg xmlns="http://www.w3.org/2000/svg" width="35" height="35" fill="currentColor" class="bi bi-box-arrow-right" viewBox="0 0 16 16">
-            <path fill-rule="evenodd" d="M10 12.5a.5.5 0 0 1-.5.5h-8a.5.5 0 0 1-.5-.5v-9a.5.5 0 0 1 .5-.5h8a.5.5 0 0 1 .5.5v2a.5.5 0 0 0 1 0v-2A1.5 1.5 0 0 0 9.5 2h-8A1.5 1.5 0 0 0 0 3.5v9A1.5 1.5 0 0 0 1.5 14h8a1.5 1.5 0 0 0 1.5-1.5v-2a.5.5 0 0 0-1 0v2z"/>
-            <path fill-rule="evenodd" d="M15.854 8.354a.5.5 0 0 0 0-.708l-3-3a.5.5 0 0 0-.708.708L14.293 7.5H5.5a.5.5 0 0 0 0 1h8.793l-2.147 2.146a.5.5 0 0 0 .708.708l3-3z"/>
-          </svg>
         </div>
       </div>
     </nav>
@@ -35,14 +31,20 @@
       <div class="modal-dialog" role="document">
         <div class="modal-content">
           <div class="modal-header">
-            <h5 class="modal-title" id="exampleModalLabel">Modal title</h5>
+            <h5 class="modal-title" id="exampleModalLabel">Welcome to WordCloudify</h5>
             <button type="button" class="close" data-dismiss="modal" aria-label="Close">
               <span aria-hidden="true">&times;</span>
             </button>
           </div>
           <div class="modal-body">
-            For more detail on how WordCloudify uses your data, please check out our
-            <a href="./privacyPolicy.html">privacy policy</a>.
+            <p>
+              WordCloudify allows Spotify users to display their top artists in the form of a word cloud.
+              You can customize your word cloud by choosing your word cloud's color theme as well as time range of your top artist data.
+            </p>
+            <p>
+              For more detail on how WordCloudify uses your data, please check out our
+              <a href="./privacyPolicy.html">privacy policy</a>.
+            </p>
           </div>
           <div class="modal-footer">
             <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
@@ -55,7 +57,7 @@
       <div id="login">
         <div class="row wrapper">
           <div id="one" class="col-sm-5">
-            <img class="media-object" width="500" src="./exampleWordcloud.png" />
+            <img class="media-object" width="500" src="./exampleWordcloud.jpg"/>
           </div>
     
           <div class="col-sm-5" id="two">
