updated themes to use seasons

--- a/authorization_code/public/index.html
+++ b/authorization_code/public/index.html
@@ -115,9 +115,10 @@
               </div>
               <h2 class="label">Choose a theme</h2>
               <div class="btn-toolbar" id="button-group2">
-                <button class="btn themeBtn leftMostCustomBtn" id='grunge'>Grunge</button>
-                <button class="btn themeBtn" id="rainbow">Rainbow</button>
-                <button class="btn themeBtn" id="bubblegum">Bubblegum</button>
+                <button class="btn themeBtn leftMostCustomBtn" id='summer'>Summer</button>
+                <button class="btn themeBtn" id="fall">Fall</button>
+                <button class="btn themeBtn" id="spring">Spring</button>
+                <button class="btn themeBtn" id="winter">Winter</button>
               </div>
               <button type="button" class="btn btn-primary" id="download">Download Image</button>
             </div>
