--- a/authorization_code/public/index.html
+++ b/authorization_code/public/index.html
@@ -125,7 +125,7 @@
           </div>
         </div>
       </div>
-      <div style="text-align: center; padding-top: 100px;">
+      <div id="testingHeroku">
         <img src="./Spotify_Logo_CMYK_Black.png" style="width: 100px; height: auto;" id="spotifyImage">
         <h2 style="padding-top: 10px;"> Made by Max Mastali</h2>
       </div>
@@ -136,7 +136,7 @@
     </div> -->
 
     <script src="./wordcloud2.js"></script>
-    <script src="http://code.jquery.com/jquery-1.10.1.min.js"></script>
+    <script src="https://code.jquery.com/jquery-1.10.1.min.js"></script>
     <script src="./server.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
     <script src="https://html2canvas.hertzen.com/dist/html2canvas.js"></script>
