index should be more mobile friendly now

--- a/authorization_code/public/index.html
+++ b/authorization_code/public/index.html
@@ -91,7 +91,7 @@
               <h3 style="padding-bottom: 0px;">Presented by
                 <span class="wordcloudifyFont">WordCloudify</span>
               </h3>
-              <canvas id="word_cloud" class="word_cloud box" width="550px" height="400px" style="padding-top: 0px;"></canvas>
+              <canvas id="word_cloud" class="word_cloud" width="550px" height="400px" style="padding-top: 0px;"></canvas>
               <!-- <img src="./Spotify_Logo_CMYK_Black.png" class="overlay box" id="spotifyWatermark"> -->
               <!-- <img src="./Spotify_Logo_CMYK_Black.png" id="spotifyImage"> -->
 
