--- a/authorization_code/public/privacyPolicy.html
+++ b/authorization_code/public/privacyPolicy.html
@@ -51,18 +51,18 @@
             </div>
             </div>
         </div> 
-        
-        <div style="text-align: center; padding-top: 20px; padding-left: 10px; padding-right: 10px; width:100%; margin:0 auto;">
-            <h1>Privacy Policy</h1>
-            <p>WordCloudify uses Spotify's API in order to retrieve your top artists. By choosing to use WordCloudify, you agree to the use of the data for your top artists.</p>
-            <p>None of the data gathered by WordCloudify is stored or shared to any third parties. All information collected is used solely to present your word cloud.</p>
-            <p>If at any point you would like to revoke WordCloudify's permissions with your account, you can do so on
-                <a href="http://www.spotify.com/account/apps/?_ga=2.57194153.2059435232.1677244602-1044990631.1616788427">your apps page</a>.
-                This
-                <a href="https://support.spotify.com/us/article/spotify-on-other-apps/">article</a>
-              provides further instructions on how to do so.
-            </p>
-            <p>For any further inquiries, please contact me.</p>
-        </div>
+            <div id="privacyPolicyContainer">
+                <h1>Privacy Policy</h1>
+                <p>WordCloudify uses Spotify's API in order to retrieve your top artists. By choosing to use WordCloudify, you agree to the use of the data for your top artists.</p>
+                <p>None of the data gathered by WordCloudify is stored or shared to any third parties. All information collected is used solely to present your word cloud.</p>
+                <p>If at any point you would like to revoke WordCloudify's permissions with your account, you can do so on
+                    <a href="http://www.spotify.com/account/apps/?_ga=2.57194153.2059435232.1677244602-1044990631.1616788427">your apps page</a>.
+                    This
+                    <a href="https://support.spotify.com/us/article/spotify-on-other-apps/">article</a>
+                provides further instructions on how to do so.
+                </p>
+                <p>For any further inquiries, please contact me.</p>
+            </div>
+        <div>
     </body>
 </html>
