spotify login text is now mobile friendly

--- a/authorization_code/public/index.html
+++ b/authorization_code/public/index.html
@@ -60,7 +60,7 @@
             <img class="media-object" width="500" src="./exampleWordcloud.jpg"/>
           </div>
     
-          <div class="col-sm-5" id="two">
+          <div class="col-sm-5" id="spotifyLogin">
             <h2>Generate a word cloud with your top artists</h2>
             <a href="/login" class="btn btn-success">Log in with Spotify</a>
           </div>
