making login page more mobile friendly

--- a/authorization_code/public/index.html
+++ b/authorization_code/public/index.html
@@ -56,8 +56,8 @@
     <div class="container" style="padding-top: 10px;">
       <div id="login">
         <div class="row wrapper">
-          <div id="one" class="col-sm-5">
-            <img class="media-object" width="500" src="./exampleWordcloud.jpg"/>
+          <div id="one" class="col-sm-5" style="text-align: left;">
+            <img class="media-object" id="exampleWordCloudImage" width="500px" src="./exampleWordcloud.jpg"/>
           </div>
     
           <div class="col-sm-5" id="spotifyLogin">
