added my linktree

--- a/authorization_code/public/privacyPolicy.html
+++ b/authorization_code/public/privacyPolicy.html
@@ -61,7 +61,7 @@
                     <a href="https://support.spotify.com/us/article/spotify-on-other-apps/">article</a>
                 provides further instructions on how to do so.
                 </p>
-                <p>For any further inquiries, please contact me.</p>
+                <p>For any further inquiries, please contact <a href="https://linktr.ee/maxmastali">me</a>.</p>
             </div>
         <div>
     </body>
