--- a/authorization_code/public/index.html
+++ b/authorization_code/public/index.html
@@ -128,7 +128,7 @@
       </div>
       <div id="testingHeroku">
         <img src="./Spotify_Logo_CMYK_Black.png" style="width: 100px; height: auto;" id="spotifyImage">
-        <h2 style="padding-top: 10px;"> Made by Max Mastali</h2>
+        <h2 style="padding-top: 10px;"> Made by <a href="https://linktr.ee/maxmastali">Max Mastali</a></h2>
       </div>
       
     <!-- <div class="wrapper">
