added spotify logal to modal

--- a/authorization_code/public/privacyPolicy.html
+++ b/authorization_code/public/privacyPolicy.html
@@ -52,6 +52,10 @@
                     For more detail on how WordCloudify uses your data, please check out our
                     <a href="./privacyPolicy.html">privacy policy</a>.
                 </p>
+                <div style="text-align: center; padding-top: 20px;">
+                    <img src="./Spotify_Logo_CMYK_Black.png" style="width: 100px; height: auto;" id="spotifyImage">
+                    <h6 style="padding-top: 10px;"> Made by <a href="https://linktr.ee/maxmastali">Max Mastali</a></h2>
+                  </div>
                 </div>
                 <div class="modal-footer">
                 <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
