added a custom color theme button

--- a/authorization_code/public/index.html
+++ b/authorization_code/public/index.html
@@ -108,6 +108,7 @@
                 <button class="btn themeBtn" id="fall">Fall</button>
                 <button class="btn themeBtn" id="spring">Spring</button>
                 <button class="btn themeBtn" id="winter">Winter</button>
+                <button class="btn themeBtn" id="custom">Custom</button>
               </div>
               <button type="button" class="btn btn-primary" id="download">Download Image</button>
             </div>
