can now choose custom colors for word cloud

--- a/authorization_code/public/index.html
+++ b/authorization_code/public/index.html
@@ -110,6 +110,16 @@
                 <button class="btn themeBtn" id="winter">Winter</button>
                 <button class="btn themeBtn" id="custom">Custom</button>
               </div>
+              <div class="btn-toolbar" id="custom-colors">
+                <p class="label">Choose a custom color</h2>
+                <div>
+                  <input type="color" id="first" value="#000000"/>
+                  <input type="color" id="second" value="#000000"/>
+                  <input type="color" id="third" value="#000000"/>
+                  <input type="color" id="fourth" value="#000000"/>
+                  <input type="color" id="fifth" value="#000000"/>
+                </div>
+              </div>
               <button type="button" class="btn btn-primary" id="download">Download Image</button>
             </div>
           </div>
