--- a/authorization_code/public/index.html
+++ b/authorization_code/public/index.html
@@ -110,10 +110,10 @@
                 <button class="btn themeBtn" id="winter">Winter</button>
                 <button class="btn themeBtn" id="custom">Custom</button>
               </div>
-              <div class="btn-toolbar" id="custom-colors">
-                <p class="label">Choose a custom color</h2>
-                <div>
-                  <input type="color" id="first" value="#000000"/>
+              <div class="btn-toolbar" id="custom-colors" style="display: none;">
+                <h2 class="label">Create a custom color theme</h2>
+                <div id="button-group2">
+                  <input type="color" id="first" style="margin-left: 0px;" value="#000000"/>
                   <input type="color" id="second" value="#000000"/>
                   <input type="color" id="third" value="#000000"/>
                   <input type="color" id="fourth" value="#000000"/>
