user can now choose how many custom colors they want to use

--- a/authorization_code/public/index.html
+++ b/authorization_code/public/index.html
@@ -94,7 +94,7 @@
           </div>
     
           <div class="col-sm-5" id="two">
-            <div style="max-height: 325px; padding-left: 20px;">
+            <div style="max-height: 450px; padding-left: 20px;">
               <h1 class="label">Customize</h1>
               <h2 class="label">Choose a time range</h2>
               <div class="btn-toolbar" id="button-group">
@@ -112,7 +112,15 @@
               </div>
               <div class="btn-toolbar" id="custom-colors" style="display: none;">
                 <h2 class="label">Create a custom color theme</h2>
-                <div id="button-group2">
+                <div class="btn-toolbar" id="button-group2">
+                  <h5 style="padding-top: 4px;">Number of colors:</h5>
+                  <button class="btn pickerBtn leftMostCustomBtn" style="padding-left: 15px; padding-top: 0px;" id='1'>1</button>
+                  <button class="btn pickerBtn" id="2" style="padding-top: 0px;">2</button>
+                  <button class="btn pickerBtn" id="3" style="padding-top: 0px;">3</button>
+                  <button class="btn pickerBtn" id="4" style="padding-top: 0px;">4</button>
+                  <button class="btn pickerBtn" id="5" style="padding-top: 0px;">5</button>
+                </div>
+                <div id="button-group3">
                   <input type="color" id="first" style="margin-left: 0px;" value="#000000"/>
                   <input type="color" id="second" value="#000000"/>
                   <input type="color" id="third" value="#000000"/>
