added some mobile support

--- a/authorization_code/public/index.html
+++ b/authorization_code/public/index.html
@@ -113,19 +113,19 @@
               <div class="btn-toolbar" id="custom-colors" style="display: none;">
                 <h2 class="label">Create a custom color theme</h2>
                 <div class="btn-toolbar" id="button-group2">
-                  <h5 style="padding-top: 4px;">Number of colors:</h5>
-                  <button class="btn pickerBtn leftMostCustomBtn" style="padding-left: 15px; padding-top: 0px;" id='1'>1</button>
-                  <button class="btn pickerBtn" id="2" style="padding-top: 0px;">2</button>
-                  <button class="btn pickerBtn" id="3" style="padding-top: 0px;">3</button>
-                  <button class="btn pickerBtn" id="4" style="padding-top: 0px;">4</button>
-                  <button class="btn pickerBtn" id="5" style="padding-top: 0px;">5</button>
+                  <h5 id="pickerLabel">Number of colors:</h5>
+                  <button class="btn pickerBtn leftMostPickerBtn" id='1'>1</button>
+                  <button class="btn pickerBtn" id="2">2</button>
+                  <button class="btn pickerBtn" id="3">3</button>
+                  <button class="btn pickerBtn" id="4">4</button>
+                  <button class="btn pickerBtn" id="5">5</button>
                 </div>
                 <div id="button-group3">
-                  <input type="color" id="first" style="margin-left: 0px;" value="#000000"/>
-                  <input type="color" id="second" value="#000000"/>
-                  <input type="color" id="third" value="#000000"/>
-                  <input type="color" id="fourth" value="#000000"/>
-                  <input type="color" id="fifth" value="#000000"/>
+                  <input type="color" id="first" class="picker" style="margin-left: 0px;" value="#000000"/>
+                  <input type="color" id="second" class="picker" value="#000000"/>
+                  <input type="color" id="third" class="picker" value="#000000"/>
+                  <input type="color" id="fourth" class="picker" value="#000000"/>
+                  <input type="color" id="fifth" class="picker" value="#000000"/>
                 </div>
               </div>
               <button type="button" class="btn btn-primary" id="download">Download Image</button>
