some mobile touchups

--- a/authorization_code/public/index.html
+++ b/authorization_code/public/index.html
@@ -103,7 +103,7 @@
                 <button class="btn timeBtn" id='long_term'>All Time</button>
               </div>
               <h2 class="label">Choose a theme</h2>
-              <div class="btn-toolbar" id="button-group2">
+              <div class="btn-toolbar" id="button-group2" style="background-color: red;">
                 <button class="btn themeBtn leftMostCustomBtn" id='summer'>Summer</button>
                 <button class="btn themeBtn" id="fall">Fall</button>
                 <button class="btn themeBtn" id="spring">Spring</button>
