--- a/authorization_code/public/index.html
+++ b/authorization_code/public/index.html
@@ -110,7 +110,7 @@
                 <button class="btn themeBtn" id="winter">Winter</button>
                 <button class="btn themeBtn" id="custom">Custom</button>
               </div>
-              <div class="btn-toolbar" id="custom-colors" style="display: none;">
+              <div class="btn-toolbar" id="custom-colors">
                 <h2 class="label">Create a custom color theme</h2>
                 <div class="btn-toolbar" id="button-group2">
                   <h5 id="pickerLabel">Number of colors:</h5>
@@ -121,7 +121,7 @@
                   <button class="btn pickerBtn" id="5">5</button>
                 </div>
                 <div id="button-group3">
-                  <input type="color" id="first" class="picker" style="margin-left: 0px;" value="#000000"/>
+                  <input type="color" id="first" class="picker" value="#000000"/>
                   <input type="color" id="second" class="picker" value="#000000"/>
                   <input type="color" id="third" class="picker" value="#000000"/>
                   <input type="color" id="fourth" class="picker" value="#000000"/>
